# mujoco-ompl

./: .gitignore  CMakeLists.txt  README.md  batch_plan.py  batch_smooth.py  cartpole_swingup_info.yaml  cartpole_swingup_prob.yaml  compound_state_projector.h  example_path.json  inverted_pendulum_prob.yaml  mujoco_ompl_interface.cpp  mujoco_ompl_interface.h  mujoco_wrapper.cpp  mujoco_wrapper.h  plan.cpp  plan_kinematic.cpp  plot_plan.py  reacher_limited.xml  reacher_prob.yaml  render_plan.cpp  render_plan_kinematic.cpp  smooth_plan.cpp
include/: compound_state_projector.h  mujoco_ompl_interface.h  mujoco_wrapper.h
problems/: 2d_point.xml  2d_point_prob.yaml  cartpole_swingup.xml  cartpole_swingup_prob.yaml  reacher_info.yaml  reacher_limited_prob.yaml  reacher_prob.yaml
src/: mujoco_ompl_interface.cpp
